<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_camera_alt"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_action_schedule"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_rooms"
            android:icon="@drawable/ic_room"
            android:title="@string/menu_rooms" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/menu_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/menu_settings" />

    </group>
</menu>