<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.app.qrteachernavigation.ui.qrScanner.QRScannerFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_q_r_scanner" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.app.qrteachernavigation.ui.schedule.ScheduleListFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />
    <fragment
        android:id="@+id/nav_news"
        android:name="com.app.qrteachernavigation.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_rooms"
        android:name="com.app.qrteachernavigation.ui.rooms.RoomsFragment"
        android:label="@string/menu_rooms"
        tools:layout="@layout/fragment_rooms" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.app.qrteachernavigation.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.app.qrteachernavigation.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />


</navigation>