<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="238dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/rounded_red_background">
    </RelativeLayout>

    <ImageView
        android:id="@+id/settingsIconImageView"
        android:layout_width="34dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        android:layout_marginTop="17dp"
        android:src="@drawable/settings_black" />


    <TextView
        android:id="@+id/settingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="Settings"
        android:visibility="gone"
        android:layout_toEndOf="@id/settingsIconImageView"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/settingsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/settingsTextView"
        android:background="@drawable/rounded_corner_dark"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photoImgView"
            android:layout_width="55dp"
            android:layout_height="53dp"
            android:src="@drawable/ic_image_profile"
            android:layout_marginTop="16dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/name_surname"
            android:textSize="22dp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="377dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="87dp"
            android:layout_marginStart="1dp" />

        <TextView
            android:id="@+id/accountSettingsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_settings"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_below="@+id/divider2"
            />

        <TextView
            android:id="@+id/editPhotoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountSettingsTv"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/edit_photo"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/arrowEditPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:layout_alignBottom="@id/editPhotoTv"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp" />


        <TextView
            android:id="@+id/TvChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editPhotoTv"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/change_password"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/arrowChangePwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:layout_alignBottom="@id/TvChangePassword"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/TvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TvChangePassword"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/str_language"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/languageSpinner"
            android:layout_width="100dp"
            android:background="@drawable/spinner_bg"
            android:layout_height="32dp"

            android:layout_marginEnd="16dp"
            android:layout_below="@id/TvLanguage"
            android:layout_alignBaseline="@id/TvLanguage"
            android:layout_alignParentEnd="true" />


        <Switch
            android:id="@+id/switchNotifications"
            android:layout_width="345dp"
            android:layout_height="25dp"
            android:layout_below="@id/TvLanguage"
            android:layout_marginStart="16dp"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="Push notifications"
            android:textOff="Off"
            android:textOn="On"
            android:layout_marginEnd="15dp"
            android:textSize="22sp" />

        <Switch
            android:id="@+id/switchDarkMode"
            android:layout_width="342dp"
            android:layout_height="30dp"
            android:layout_below="@id/switchNotifications"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/dark_mode"
            android:layout_marginEnd="15dp"
            android:textOff="Light"
            android:textOn="Dark"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvLogOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/switchDarkMode"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/log_off"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/arrowLogOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:layout_alignBottom="@id/tvLogOff"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="377dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="20sp"
            android:layout_marginStart="1dp"
            android:layout_below="@id/tvLogOff" />

        <TextView
            android:id="@+id/tvMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_below="@id/divider" />


        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMore"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/about_us_title"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/arrowAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:layout_alignBottom="@id/tvAbout"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp" />


        <TextView
            android:id="@+id/tvPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAbout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:fontFamily="@font/inter_medium"
            android:text="@string/privacy_policy"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/arrowPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:layout_alignBottom="@id/tvPrivacy"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/tvTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPrivacy"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/terms_and_conditions_title"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/arrowTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:layout_alignBottom="@id/tvTerms"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp" />


    </RelativeLayout>


</RelativeLayout>
